# thermopt

./: .buildinfo  .bumpversion.cfg  .gitignore  README.md  environment.yaml  genindex.html  index.html  multiphase_hx_test.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: bibliography.doctree  cycle_optimization.doctree  developer_guide.doctree  installation.doctree  tutorials.doctree
.github/workflows/: ci.yml  deploy_docs.yaml  publish_to_pypi.yaml  publish_to_pypi.yml
_modules/: index.html  thermopt.html
_modules/thermopt/: config.html  math.html  optimize_cycle.html
_sources/: index.rst
_static/: documentation_options.js
assignments/organic_rankine_cycle/: ORC_single_phase.yaml  description.md  run_optimization.py
assignments/transcritical_heat_pump/: description.md  run_optimization.py  transcritical_heat_pump.yaml
cycles/: __init__.py  brayton_recuperated.py  brayton_split_compression.py  components.py  cycle_optimization.py  cycle_optimization_old.py
docs/: build_bibliography.py  build_docs.py  conf.py  index.rst  work_progress.md
docs/dev/: case_sCO2_recuperated.yaml  run_optimization_ipopt.py
docs/source/: bibliography.bib  cycle_optimization.rst  developer_guide.rst  installation.rst  tutorials.rst
examples/CO2_PTES/: case_sCO2_PTES.yaml  case_sCO2_PTES_roberto.yaml  run_optimization.py
examples/CO2_heat_pump/: case_sCO2_heat_pump_turbine.yaml  case_sCO2_heat_pump_valve.yaml  run_comparison.py  run_optimization.py
examples/CO2_recompression/: case_sCO2_recompression.yaml  run_optimization.py
examples/CO2_recuperated/: case_sCO2_recuperated.yaml  case_sCO2_recuperated_ipopt.yaml  run_optimization.py
examples/HX_development/: PHE_correlations.py  blended_calculation.py
examples/ORC/: case_butane_ORC.yaml  case_butane_PEORC.yaml  case_butane_transcritical.yaml  run_optimization.py
examples/PTES_CO2/: case_PTES_CO2.yaml  case_PTES_CO2_old.yaml  case_PTES_CO2_turbo.yaml  case_sCO2_PTES_roberto.yaml  case_sCO2_heat_pump_charge.yaml  run_optimization.py  run_sensitivity_max_temperature.py  run_sensitivity_turbo_efficiency.py  run_sensitivity_turbo_shaft.py
source/: bibliography.html  cycle_optimization.html  developer_guide.html  installation.html  tutorials.html
source/api/: thermopt.html  (+36 more)
tests/: run_tests.py  test_example_cases.py  utilities.py
thermodynamic_cycles/: case_sCO2_recompression.yaml  demo_cycle_optimization.py  work_progress.md
thermopt/: __init__.py  config.py  config_validation.py  optimize_cycle.py
(+278 files in other folders)
