[tool.poetry]
name = "thermopt"
version = "0.2.0"
description = "A Python tool for the analysis and optimization of thermodynamic cycles."
authors = ["Roberto Agromayor"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/turbo-sim/thermopt"
documentation = "https://github.com/turbo-sim/thermopt"


[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^2.2.4"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
PyYAML = "^6.0.2"
toml = "^0.10.2"
cycler = "^0.12.1"
imageio = {extras = ["ffmpeg"], version = "^2.37.0"}
spyder-kernels = "3.0.2"
pysolver_view = "^0.6.2"
coolpropx = "^0.1.0"
#pysolver_view = { path = "../pysolver_view/", develop = true }
#coolpropx = { path = "../coolpropx/", develop = true }

[tool.poetry.group.dev.dependencies]
ipython = ">=8.13,<8.17"
black = "^25.1.0"
pytest = "^8.3.5"
pyzotero = "^1.5.19"
numpydoc = "^1.7.0"
sphinx = "^7.3.7"
sphinx-tabs = "^3.4.5"
sphinx-book-theme = "^1.1.2"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-bibtex = "^2.6.2"
sphinxawesome-theme = "^5.1.5"
sphinx-design = "^0.6.0"
sphinx-togglebutton = "^0.3.2"
bump2version = "^1.0.1"
pydantic = "^2.7.2"
sphinx-autobuild = "^2024.10.3"
myst-parser = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Rememeber to add --tags when publishing a new version
# git push origin main --tags